RSML Expert fix varying timestep